--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,9 @@ div.bigBodyPanel {
     border-radius: 10px;
     padding: 10px;
     height: auto !important;
+
+    animation-name: fade_in;
+    animation-duration: 0.25s;
 }
 
 div.panelHolder {
@@ -72,10 +75,27 @@ div.subbigBodyPanel {
     margin-right: 2px;
     margin-left: 2px;
 
+    animation-name: fade_in;
+    animation-duration: 0.5s;
+
     width: initial;
     height: auto !important;
 }
 
+@keyframes fade_in {
+    from {opacity: 0%;}
+    to {opacity: 90%;}
+}
+
 div,panelHolder {
     height: 100px;
+}
+
+@media (max-width:700px){
+
+    div.panelHolder {
+        height: auto;
+        grid-template-columns: auto;
+    }
+
 }
