actually added any sustenance to one of the panels

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ h1 {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
+    font-style: italic;
 }
 
 h1.mainTitle {
